# ProyectoII_SistemasOperativos_Grupo4

./: .gitignore  CMakeLists.txt  Makefile  README.md  estructuras.h  index.html  listas.c  listas.h  main.c  modulo2.c  modulo2.h  planificador.c  planificador.h  procesos.c  procesos.h
src/: MMU_Algoritmos.c  algoritmos.c  api.c  api.h  configSO.c  emulacion.c  estructuras.h  listas.c  listas.h  main.c  planificador.c  procesos.c  servidor.c  servidor.h  tablapaginas.c  tablapaginas.h  visualizacion.c
web/: index.html
